tests/snapshots/parser_snapshots__parser_all@ast-74.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/parser/parse_struct_with_method.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Struct(
                    StructDecl {
                        name: "Foo",
                        is_extern: false,
                        generics: [],
                        fields: [],
                        methods: [
                            FunctionDecl {
                                name: "bar",
                                has_self_param: false,
                                is_extern: false,
                                generics: [],
                                return_type: Some(
                                    Primitive(
                                        Int32,
                                    ),
                                ),
                                params: [],
                                body: None,
                                span: Span {
                                    line: 1,
                                    col: 22,
                                    len: 8,
                                },
                            },
                        ],
                        implements: [],
                    },
                ),
                span: Span {
                    line: 1,
                    col: 7,
                    len: 6,
                },
            },
        ],
    },
)
