tests/snapshots/parser_snapshots__parser_all@ast-75.snap
---
source: tests/parser_snapshots.rs
assertion_line: 19
expression: ast
input_file: examples/parser/parse_extern_struct.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Struct(
                    StructDecl {
                        name: "MyCFunctionArgs",
                        is_extern: true,
                        generics: [],
                        fields: [
                            FieldDecl {
                                name: "a",
                                ty: Primitive(
                                    Int32,
                                ),
                                is_pointer: false,
                            },
                            FieldDecl {
                                name: "b",
                                ty: Primitive(
                                    String,
                                ),
                                is_pointer: true,
                            },
                        ],
                        methods: [],
                        implements: [],
                    },
                ),
                span: Span {
                    line: 1,
                    col: 14,
                    len: 6,
                },
            },
        ],
    },
)
