tests/snapshots/parser_snapshots__parser_all@ast-76.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/parser/parse_optional_generic_params.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Struct(
                    StructDecl {
                        name: "Point",
                        is_extern: false,
                        generics: [
                            GenericParam {
                                name: "T",
                                bounds: [],
                            },
                            GenericParam {
                                name: "U",
                                bounds: [],
                            },
                        ],
                        fields: [],
                        methods: [],
                        implements: [],
                    },
                ),
                span: Span {
                    line: 1,
                    col: 7,
                    len: 6,
                },
            },
        ],
    },
)
