tests/snapshots/parser_snapshots__parser_all@ast-77.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/parser/parse_map_literal.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "test",
                        has_self_param: false,
                        is_extern: false,
                        generics: [],
                        return_type: None,
                        params: [],
                        body: Some(
                            Block {
                                statements: [
                                    Expr(
                                        LiteralMap(
                                            [
                                                (
                                                    Literal(
                                                        String(
                                                            "a",
                                                        ),
                                                    ),
                                                    Literal(
                                                        Int(
                                                            "1",
                                                        ),
                                                    ),
                                                ),
                                                (
                                                    Literal(
                                                        String(
                                                            "b",
                                                        ),
                                                    ),
                                                    Literal(
                                                        Int(
                                                            "2",
                                                        ),
                                                    ),
                                                ),
                                            ],
                                        ),
                                    ),
                                ],
                                returns: None,
                            },
                        ),
                        span: Span {
                            line: 1,
                            col: 9,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 1,
                    col: 9,
                    len: 8,
                },
            },
        ],
    },
)
