tests/snapshots/parser_snapshots__parser_all@ast-79.snap
---
source: tests/parser_snapshots.rs
assertion_line: 19
expression: ast
input_file: examples/parser/parse_interface_decl_unit.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Interface(
                    InterfaceDecl {
                        name: "Named",
                        generics: [],
                        fields: [
                            FieldDecl {
                                name: "name",
                                ty: Primitive(
                                    String,
                                ),
                                is_pointer: false,
                            },
                        ],
                        methods: [],
                        implements: [],
                    },
                ),
                span: Span {
                    line: 1,
                    col: 10,
                    len: 9,
                },
            },
        ],
    },
)
