tests/snapshots/parser_snapshots__parser_all@ast-8.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/language/08_interfaces.of
---
Err(
    "unexpected token ','",
)
