tests/snapshots/parser_snapshots__parser_all@ast-82.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/parser/parse_type_alias_with_generics.of
---
Ok(
    Program {
        items: [
            Item {
                kind: TypeAlias(
                    TypeAliasDecl {
                        name: "Option",
                        generics: [
                            GenericParam {
                                name: "T",
                                bounds: [],
                            },
                        ],
                        ty: Union(
                            [
                                Named(
                                    "T",
                                    [],
                                ),
                                Primitive(
                                    Null,
                                ),
                            ],
                        ),
                    },
                ),
                span: Span {
                    line: 1,
                    col: 5,
                    len: 4,
                },
            },
        ],
    },
)
