tests/snapshots/parser_snapshots__parser_all@ast-84.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/01_type_system/union_error_pattern.of
---
Err(
    "unexpected token ','",
)
